# httui-notes

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml  vitest.config.ts
.claude/commands/: analize.md  auto-start.md  start.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  ci.yml  deploy-landing.yml  deploy-web.yml  pr-title.yml  release.yml
backlog/: 00-project-setup.md
docs/: ARCHITECTURE.md  MIGRATION.md  PERFORMANCE.md  SECURITY.md  SPEC.md  blocks.md  chat-design.md  chat-mcp.md  concepts.md  db-block-redesign.md  db-block-vision.md  getting-started.md  http-block-redesign.md  http-timing-isahc-future.md  notes-db-encryption-future.md  teste.md  tui-design.md
docs-llm/jaum-audit/: 028-schema-cache-remote-split.md  029-pool-exec-pg-mysql-stay-excluded.md  030-pivot-to-epic-42.md  031-schema-preview-defer-pk-fk-rowcount.md  032-rotate-stays-in-credentials-section.md  SESSION-LOG.md  state-2026-04-29-1730.md  state-2026-04-29-1740.md  state-2026-04-29-1800.md  state-2026-04-30-0025.md  state-2026-04-30-0035.md
docs-llm/v1/: tech-debt.md
docs/adr/: 0001-toml-schemas.md  0002-secret-references.md  0003-file-watcher.md  0004-local-overrides.md  README.md
docs/backlog/: 00-project-setup.md  01-editor-markdown.md  02-vault-filesystem.md  03-multi-pane-session.md  04-search.md  05-block-system.md  06-database-blocks.md  07-http-client.md  08-e2e-runner.md  09-ui-shell.md  10-polish-pending.md  11-chat-sidecar.md  12-chat-mvp.md  13-chat-agente.md  14-chat-qol.md  15-public-release.md  16-database-security.md  17-tui-foundation.md  18-tui-buffer-rendering.md  19-tui-vim-engine.md  20-tui-editor-shell.md  21-tui-block-widgets.md  README.md  (+3 more)
httui-core/: Cargo.toml
httui-core/migrations/: 001_initial.sql  003_chat.sql  004_permissions.sql  005_audit_log.sql  006_schema_cache_schema_name.sql  007_connection_readonly.sql  008_sqlite_port_null.sql  009_block_run_history.sql  010_block_settings.sql  011_block_examples.sql  012_block_run_history_plan.sql
httui-core/src/: block_examples.rs  block_history.rs  block_results.rs  block_settings.rs  captures_cache.rs  config.rs  dotenv.rs  error.rs  lib.rs  parser.rs  paths.rs  references.rs  run_bodies.rs  runner.rs  search.rs  tag_index.rs  templates.rs  var_uses.rs  vaults.rs
httui-core/src/block_history/: mod.rs  types.rs
httui-core/src/blocks/: db_export.rs  http_codegen.rs  mod.rs  parser.rs  registry.rs  serializer.rs
httui-core/src/db/: chat.rs  connections.rs  driver.rs  environments.rs  keychain.rs  lookup.rs  mod.rs  pool.rs  pool_exec_mysql.rs  pool_exec_pg.rs  pool_exec_sqlite.rs  pool_manager.rs  query_error.rs  schema_cache.rs  schema_cache_remote.rs  sql_scanner.rs
httui-core/src/executor/: mod.rs
httui-core/src/executor/db/: mod.rs  types.rs
httui-core/src/executor/http/: mod.rs  types.rs
httui-core/src/explain/: mod.rs  mongo.rs  mysql.rs  node.rs  postgres.rs  prefix.rs
httui-core/src/frontmatter/: mod.rs  parser.rs
httui-core/src/fs/: mod.rs
httui-core/src/git/: checkout.rs  log.rs  mod.rs  remote.rs  remote_host.rs  staging.rs  status.rs  sync.rs
httui-core/src/preflight/: evaluator.rs  io_evaluator.rs  mod.rs  parser.rs
httui-core/src/secrets/: mod.rs  parser.rs
httui-core/src/vault_config/: atomic.rs  connection_traits.rs  connection_views.rs  connections.rs  connections_store.rs  environments_store.rs  envs.rs  error.rs  gitignore.rs  layout.rs  merge.rs  migration.rs  missing_secrets.rs  mod.rs  scaffold.rs  secret_resolver.rs  user.rs  user_store.rs  validate.rs  watch_paths.rs  workspace.rs  workspace_store.rs
httui-core/tests/: block_parity.rs
httui-core/tests/parity-fixtures/: README.md
httui-desktop/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
httui-mcp/: Cargo.toml
httui-mcp/src/: main.rs  server.rs
httui-mcp/src/tools/: blocks.rs  connections.rs  environments.rs  mod.rs  notes.rs
httui-sidecar/: package.json
httui-tui/: Cargo.toml
httui-tui/src/: app.rs  cli.rs  clipboard.rs  config.rs  document_loader.rs  error.rs  event.rs  fs_watch.rs  main.rs  pane.rs  schema.rs  sql_completion.rs  terminal.rs  tree.rs  vault.rs
httui-tui/src/buffer/: block.rs  cursor.rs  document.rs  layout.rs  mod.rs  segment.rs
httui-tui/src/commands/: db.rs  http.rs  mod.rs  search.rs
httui-tui/src/ui/: block_history.rs  block_template_picker.rs  blocks.rs  completion_popup.rs  connection_picker.rs  content_search.rs  cursor.rs  db_confirm_run.rs  db_export_picker.rs  db_row_detail.rs  db_settings_modal.rs  environment_picker.rs  fence_edit.rs  help.rs  http_response_detail.rs  mod.rs  prose.rs  quickopen.rs  sql_highlight.rs  status.rs  tab_picker.rs  tabs.rs  tree.rs
httui-tui/src/vim/: change.rs  dispatch.rs  ex.rs  insert.rs  keybindings.rs  lineedit.rs  mod.rs  mode.rs  motions.rs  operator.rs  parser.rs  quickopen.rs  register.rs  search.rs  state.rs  textobject.rs  undo.rs
httui-web/: CONTENT.md  eslint.config.js  index.html  package.json  vite.config.ts
landing-page/: .impeccable.md  ASSETS-GUIDE.md  SECTIONS.md  index.html  package-lock.json  package.json  tsconfig.json
scripts/: coverage-check.sh  setup-hooks.sh  size-check.sh
sidecar/: package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 002_env_is_secret.sql
src-tauri/resources/: claude-sidecar.mjs
src-tauri/src/: block_results.rs  config.rs  executions.rs  lib.rs  main.rs  search.rs
src-tauri/src/chat/: commands.rs  mod.rs  permissions.rs  protocol.rs  sidecar.rs
src-tauri/src/db/: connections.rs  environments.rs  keychain.rs  mod.rs  schema_cache.rs
src-tauri/src/executor/: e2e.rs  http.rs  mod.rs
src-tauri/src/executor/db/: mod.rs
src-tauri/src/fs/: mod.rs  watcher.rs
(+707 files in other folders)
