[package]
name = "httui-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
httui-core = { path = "../httui-core" }
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
schemars = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing-subscriber = "0.3"
