[package]
name = "httui-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notes-tui"
path = "src/main.rs"

[dependencies]
httui-core = { path = "../httui-core" }
ropey = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tree-sitter = "0.23"
tree-sitter-sequel = "0.3"
arboard = "3"
chrono = "0.4"
notify = "8"

[dev-dependencies]
tempfile = "3"
