[package]
name = "httui-notes"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "postgres", "mysql", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
base64 = "0.22"
notify = "8"
trash = "5"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
